<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="angelapps.com.tarea2coursera.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/margen_horizontal"
        android:layout_marginLeft="@dimen/margen_horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_marginTop="25dp"
                android:layout_height="30dp"
                android:src="@drawable/contacts_48" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILprimerimputlayout"
                android:layout_marginTop="@dimen/margen_superior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_input"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/calendar_52"
                />

            <android.support.design.widget.TextInputLayout

                android:layout_marginTop="10dp"
                android:id="@+id/TILsegundoimputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textoFecha"
                    android:hint="@string/fecha_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    />


            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/phone_48"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILtercerinputlayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:hint="@string/telefono_input"
                    android:id="@+id/textoTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/text_email"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/message_48"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILcuartoinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_input"
                    android:singleLine="true"
                    android:imeOptions="actionNext"

                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/TILquintolyout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textoDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion_input"
                />





        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="Siguiente"
        >

    </Button>



</RelativeLayout>
